--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
           </div>
         </div>
       </nav>
+
+      <main class="container">
+        <div class="card" style="width: 36rem;">
+            <img src="https://i.pinimg.com/originals/ff/5f/ac/ff5fac560ee12287e6b12e5f90943376.png" class="card-img-top" alt="Profile photo">
+            <div class="card-body">
+              <h5 class="card-title">About Me</h5>
+              <p class="card-text">My name is Silvia Popescu, and I am a service industry professional looking to transition into the web development world. Previously, I have pursued a Bachelor's Degree in Aerospace Engineering, and do plan to continue that pursuit in the future. In my free time, I enjoy spending time with my dog, a one year old Dalmation named Pixel. I also have a passion for Vinyasa Yoga, and hope to one day be confident enough in my yoga practice to become an instructor myself.</p>
+              <p class="card-text">I was born in Sacramento, California, and have spent most of my life in my hometown. One aspect of web development as a career that appeals to me is the potential to work remotely, giving me the opportunity to move aruond and travel without my career being affected.</p>
+              <!-- Button (will probably remove)-->
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+      </main>
 </body>
 </html>
