Added cards to portfolio page, edited button on bio page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Silvia Popescu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,9 +33,9 @@
             <div class="card-body">
               <h5 class="card-title">About Me</h5>
               <p class="card-text">My name is Silvia Popescu, and I am a service industry professional looking to transition into the web development world. Previously, I have pursued a Bachelor's Degree in Aerospace Engineering, and do plan to continue that pursuit in the future. In my free time, I enjoy spending time with my dog, a one year old Dalmation named Pixel. I also have a passion for Vinyasa Yoga, and hope to one day be confident enough in my yoga practice to become an instructor myself.</p>
-              <p class="card-text">I was born in Sacramento, California, and have spent most of my life in my hometown. One aspect of web development as a career that appeals to me is the potential to work remotely, giving me the opportunity to move aruond and travel without my career being affected.</p>
+              <p class="card-text">I was born in Sacramento, California, and have spent most of my life in my hometown. One aspect of web development as a career that appeals to me is the potential to work remotely, giving me the opportunity to move around and travel without my career being affected.</p>
               <!-- Button (will probably remove)-->
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="contact.html" class="btn btn-primary">Contact me</a>
             </div>
           </div>
       </main>
