--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Silvia Popescu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,20 +27,23 @@
         </div>
       </nav>
 
-      <!-- Start of form -->
-      <form>
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header"></div>
+        <div class="card-body">
+          <h5 class="card-title">LinkedIn</h5>
+          <p class="card-text"></p>
+          <a href="https://www.linkedin.com/in/silvia-popescu-38aab61a4/"></a>
         </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+      </div>
+      
+      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header"></div>
+        <div class="card-body">
+          <h5 class="card-title">GitHub</h5>
+          <p class="card-text"></p>
+          <a href="https://github.com/silviapopescu95"></a>
         </div>
-        <div class="form-group">
-            <label for="message">Message</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
-          </div>
-      </form>
+      </div>
+
 </body>
 </html>
