Changed portfolio page to use Bootstrap grid system.

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,21 +27,34 @@
         </div>
       </nav>
 
-      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header"></div>
-        <div class="card-body">
-          <h5 class="card-title">LinkedIn</h5>
-          <p class="card-text"></p>
-          <a href="https://www.linkedin.com/in/silvia-popescu-38aab61a4/"></a>
+      <div class="container">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col-sm-12 col-md-6 text-center">
+            <a href="https://www.linkedin.com/in/silvia-popescu-38aab61a4/">
+              <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                  <h5 class="card-title">LinkedIn</h5>
+                  <p class="card-text"></p>
+                <div class="card-body">
+                </div>
+              </div>
+              </a>
+          </div>
+          <div class="col"></div>
         </div>
-      </div>
-      
-      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header"></div>
-        <div class="card-body">
-          <h5 class="card-title">GitHub</h5>
-          <p class="card-text"></p>
-          <a href="https://github.com/silviapopescu95"></a>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col-sm-12 col-md-6 text-center">
+            <a href="https://github.com/silviapopescu95">
+              <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                  <h5 class="card-title">GitHub</h5>
+                  <p class="card-text"></p>
+                <div class="card-body">
+                </div>
+              </div>
+              </a>
+          </div>
+          <div class="col"></div>
         </div>
       </div>
 
