--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,15 @@
       <form>
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+          <input type="text" class="form-control" id="name" placeholder="Your name here">
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+          <input type="text" class="form-control" id="email" placeholder="example@gmail.com">
         </div>
         <div class="form-group">
             <label for="message">Message</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+            <input type="text" class="form-control" id="message" placeholder="Please enter an email address.">
           </div>
       </form>
 </body>
